--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background : #f1f1f1
+}
+
+::-webkit-scrollbar-thumb {
+  background : #ddd
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background : #ccc
+}
