--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("./bootstrap.css");
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -17,13 +18,13 @@ code {
 }
 
 ::-webkit-scrollbar-track {
-  background : #f1f1f1
+  background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-  background : #ddd
+  background: #ddd;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background : #ccc
+  background: #ccc;
 }
